# psalmsglobal-backend

./: Pipfile  env.example  pyproject.toml  pytest.ini
apps/: conftest.py
apps/account/: admin.py  models.py  resources.py  serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/authentication/: admin.py  apps.py  models.py  resources.py  serializers.py  signals.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_user_account_type.py  0003_alter_client_hourly_rate_currency.py  0004_alter_user_designation_category.py  0005_alter_client_hourly_rate_currency.py  0006_user_sub_category.py
apps/authentication/tests/: test_user.py
apps/callme/: admin.py  apps.py  conftest.py  resources.py  urls.py
apps/callme/migrations/: 0001_initial.py  0002_auto_20210611_1003.py  0002_remove_phonesystem_client.py  0003_script_status.py  0004_auto_20210612_0159.py  0005_alter_script_mailing_lists.py  0006_alter_attribute_form.py  0007_alter_company_business_type.py  0008_auto_20210614_0911.py  (+26 more)
apps/core/: admin.py  factories.py  models.py
apps/forum/: admin.py  urls.py
apps/grading/: admin.py  urls.py
apps/newsfeed/: admin.py  apps.py  urls.py
apps/post_paid/: admin.py  apps.py  resources.py  urls.py
apps/prepaid/: admin.py  apps.py  resources.py  urls.py
apps/resolution/: admin.py  apps.py  urls.py
apps/vodaconnect/: admin.py  apps.py  resources.py  urls.py
config/: backup.py  urls.py
config/settings/: __init__.py  base.py  drf.py
state_and_county/: list_of_county.xls  list_of_states.xls  pennsylvania.xls
(+218 files in other folders)
