[tool.poetry]
name = "Psalmsglobal"
version = "1.0.0"
description = "Call center app for Psalmsglobal"
authors = ["Xednom <monde.lacanlalay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "==3.2.8"
djoser = "*"
djangorestframework = "*"
django-environ = "*"
django-split-settings = "*"
mysqlclient = "*"
django-money = "*"
django-cors-headers = "*"
django-post-office = "*"
drf-writable-nested = "*"
django-mysql = "*"
django-ckeditor = "*"
xlrd = "*"
django-filter = "*"
django-import-export = "*"
django-bleach = "*"
django-anymail = {extras = ["mailgun"], version = "*"}
django-grappelli = "*"
pytest-django = "*"
pytest-factoryboy = "*"
pipenv-poetry-migrate = "*"
openpyxl = "^3.1.2"
django-storages = "^1.13.2"

[tool.poetry.dev-dependencies]
black = "*"
django-debug-toolbar = "*"
django-extensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
